add color swatches

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -23,6 +23,195 @@
 
     <h1 class=patterns-h1>DLx Pattern Library</h1>
 
+    <section>
+
+      <h2 class=patterns-h2>Variables</h2>
+
+      <p>The following LESS variables are available:</p>
+
+      <ul class=bulleted>
+        <li><p><code>@cdn</code>: <code>https://cdn.digitallinguistics.io</code></p></li>
+      </ul>
+
+    </section>
+
+    <section>
+
+      <h2 class=patterns-h2>Colors</h2>
+
+      <p>The following colors are available as LESS variables:</p>
+
+      <div class=color>
+        <pre><code>@wugblue</code></pre>
+        <div class='swatch wugblue-background'>#6FD1F6</div>
+        <p>The color of the wug logo.</p>
+      </div>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@verydarkblue</code></pre>
+          <div class='swatch verydarkblue-background'>#017CF2;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@darkblue</code></pre>
+          <div class='swatch darkblue-background'>#0F89FF;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@blue</code></pre>
+          <div class='swatch blue-background'>#3399ff;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@lightblue</code></pre>
+          <div class='swatch lightblue-background'>#5CAFFF;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@verylightblue</code></pre>
+          <div class='swatch verylightblue-background'>#88C4FE;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@gray</code></pre>
+          <div class='swatch gray-background'>#F5F2F0;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@verylightgreen</code></pre>
+          <div class='swatch verylightgreen-background'>#7FFED1;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@lightgreen</code></pre>
+          <div class='swatch lightgreen-background'>#4FFFC1;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@green</code></pre>
+          <div class='swatch green-background'>#23FFB1;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@darkgreen</code></pre>
+          <div class='swatch darkgreen-background'>#00FFA5;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@verydarkgreen</code></pre>
+          <div class='swatch verydarkgreen-background'>#00F39D;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@verylightorange</code></pre>
+          <div class='swatch verylightorange-background'>#FFA97F;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@lightorange</code></pre>
+          <div class='swatch lightorange-background'>#FF884F;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@orange</code></pre>
+          <div class='swatch orange-background'>#FF6A23;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@darkorange</code></pre>
+          <div class='swatch darkorange-background'>#FF5300;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@verylightpurple</code></pre>
+          <div class='swatch verylightpurple-background'>#9791FE;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@lightpurple</code></pre>
+          <div class='swatch lightpurple-background'>#7068FF;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@purple</code></pre>
+          <div class='swatch purple-background'>#4D42FF;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@darkpurple</code></pre>
+          <div class='swatch darkpurple-background'>#2A1DFF;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@verydarkpurple</code></pre>
+          <div class='swatch verydarkpurple-background'>#1002F4;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@verylightred</code></pre>
+          <div class='swatch verylightred-background'>#FF9797;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@lightred</code></pre>
+          <div class='swatch lightred-background'>#E96363;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@red</code></pre>
+          <div class='swatch red-background'>#CA3C3C;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@darkred</code></pre>
+          <div class='swatch darkred-background'>#AA1F1F;</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@verydarkred</code></pre>
+          <div class='swatch verydarkred-background'>#830505;</div>
+        </div>
+
+      </section>
+
+      <section>
+
+        <div class=color>
+          <pre><code>@lightblue-transparent</code></pre>
+          <div class='swatch lightblue-transparent'>rgba(92, 175, 255, 0.2);</div>
+        </div>
+
+        <div class=color>
+          <pre><code>@verylightblue-transparent</code></pre>
+          <div class='swatch verylightblue-transparent'>rgba(136, 196, 254, 0.2);</div>
+        </div>
+
+      </section>
+
+    </section>
+
   </body>
 
 </html>
