add inputs to pattern library

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -248,14 +248,8 @@
     <section>
       <h1>To Add</h1>
       <ul>
-        <li>button</li>
-        <li>cite</li>
-        <li>code</li>
-        <li>dfn</li>
-        <li>em</li>
-        <li>.field</li>
         <li>.hanging-indent</li>
-        <li>input (each subtype)</li>
+        <li>label (> span)</li>
         <li>legend</li>
         <li>.link</li>
         <li>.numbered</li>
