finish adding currently known styles to pattern library

--- a/patterns/examples/input.html
+++ b/patterns/examples/input.html
@@ -1,4 +1,7 @@
-<input type=button value=Button>
+<label>
+  <span>Button</span>
+  <input type=button value=Button>
+</label>
 
 <label>
   <span>Checkbox</span>
