--- a/patterns/index.html
+++ b/patterns/index.html
@@ -125,6 +125,11 @@
           <span><code class='swatch verydarkgreen-background'>#00F39D</code></span>
         </div>
 
+        <div class=color>
+          <span><code>@superdarkgreen</code></span>
+          <span><code class='swatch superdarkgreen-background'>#00AB6E</code></span>
+        </div>
+
       </section>
 
       <section>
@@ -243,25 +248,6 @@
 
       <h1>Patterns</h1>
 
-    </section>
-
-    <section>
-      <h1>To Add</h1>
-      <ul>
-        <li>.hanging-indent</li>
-        <li>label (> span)</li>
-        <li>legend</li>
-        <li>.link</li>
-        <li>.numbered</li>
-        <li>option</li>
-        <li>.page-title</li>
-        <li>.reference</li>
-        <li>.reference-list</li>
-        <li>.section-header</li>
-        <li>select</li>
-        <li>strong</li>
-        <li>.subsection-header</li>
-      </ul>
     </section>
 
     <template id=template>
