--- a/patterns/examples/field.html
+++ b/patterns/examples/field.html
@@ -1,3 +1,3 @@
-<input type=text value='This text input has been styled with the .field class'>
-<input type=text disabled value='This text input is disabled'>
-<input type=text pattern=aaa value='This text input is invalid'>
+<input class=field type=text value='This text input has been styled with the .field class'>
+<input class=field type=text disabled value='This text input is disabled'>
+<input class=field type=text pattern=aaa value='This text input is invalid'>
