--- a/patterns/index.html
+++ b/patterns/index.html
@@ -16,6 +16,7 @@
     <link rel=stylesheet href=../css/dlx.css>
 
     <link rel=stylesheet href=patterns.css>
+    <link rel=stylesheet href=atom-one-light.css>
 
   </head>
 
@@ -282,6 +283,7 @@
     </template>
 
     <script src=examples.js charset=utf-8></script>
+    <script src=highlight.js charset=utf-8></script>
     <script src=index.js charset=utf-8></script>
 
   </body>
