add icons to pattern library

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -28,6 +28,7 @@
         <option value=variables>Variables</option>
         <option value=colors>Colors</option>
         <option value=typography>Typography</option>
+        <option value=icons>Icons</option>
         <option value=patterns>Patterns</option>
       </select>
     </label>
@@ -254,12 +255,28 @@
       <p class=hanging-indent style="font-family: 'Fira Mono'; font-weight: bold;"><strong>Fira Mono Bold</strong> is used for emphasized or bolded code.</p>
 
     </section>
+    <!-- END TYPOGRAPHY -->
 
-    <section id=patterns>
+    <section id=icons>
 
-      <h1 class=section-header>Patterns</h1>
+      <h1 class=section-header>Icons</h1>
+
+      <p>Each of the following icons is available in the <code>/img</code> folder, and can be linked to via the DLx CDN at <code>https://cdn.digitallinguistics.io/img/{filename}</code>. Some are available in multiple formats.</p>
+
+      <ul>
+        <li><img src=../img/tunnel.svg alt='JSON tunnel logo'>The JSON tunnel icon is the de facto logo for DLx</li>
+        <li><img src=../img/wug.svg alt='a wug'>The blue wug is part of DLx branding, and can be used creatively wherever appropriate</li>
+        <li><img src=../img/wugbot.svg alt='a wugbot'>The wugbot icon is another de facto logo for DLx, part of DLx branding, and can be used creatively wherever appropriate</li>
+        <li><img class=favicon src=../img/tunnel.ico alt='JSON tunnel favicon'>The JSON tunnel icon as a favicon</li>
+        <li><img class=favicon src=../img/wugbot.ico alt='wugbot favicon'>The wugbot icon as a favicon</li>
+      </ul>
 
     </section>
+
+    <section id=patterns>
+      <h1 class=section-header>Patterns</h1>
+    </section>
+    <!-- END PATTERNS -->
 
     <template id=template>
       <section class=pattern>
