--- a/patterns/index.html
+++ b/patterns/index.html
@@ -299,6 +299,7 @@
       </section>
     </template>
 
+    <script src=polyfill.js charset=utf-8></script>
     <script src=examples.js charset=utf-8></script>
     <script src=highlight.js charset=utf-8></script>
     <script src=index.js charset=utf-8></script>
