--- a/patterns/index.html
+++ b/patterns/index.html
@@ -261,7 +261,7 @@
 
       <h1 class=section-header>Icons</h1>
 
-      <p>Each of the following icons is available in the <code>/img</code> folder, and can be linked to via the DLx CDN at <code>https://cdn.digitallinguistics.io/img/{filename}</code>. Some are available in multiple formats.</p>
+      <p>Each of the following icons is available in the <code>/img</code> folder, and can be linked to via the DLx CDN at <code>https://cdn.digitallinguistics.io/img/{filename}</code>. Some are available in multiple formats. Most icons are black by default, but for some there are versions in different colors as well, following the format <code>{filename}.{color}.{ext}</code>. For icons available in different sizes, the size is indicated by appending the dimensions to the filename, after an underscore, e.g. <code>tunnel_64x64.png</code>. DLx uses <a href=https://materialdesignicons.com/>Material Design Icons</a> for many of its icons.</p>
 
       <ul>
         <li><img src=../img/tunnel.svg alt='JSON tunnel logo'>The JSON tunnel icon is the de facto logo for DLx</li>
