add new icons to pattern library

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -264,7 +264,16 @@
       <p>Each of the following icons is available in the <code>/img</code> folder, and can be linked to via the DLx CDN at <code>https://cdn.digitallinguistics.io/img/{filename}</code>. Some are available in multiple formats. Most icons are black by default, but for some there are versions in different colors as well, following the format <code>{filename}.{color}.{ext}</code>. For icons available in different sizes, the size is indicated by appending the dimensions to the filename, after an underscore, e.g. <code>tunnel_64x64.png</code>. DLx uses <a href=https://materialdesignicons.com/>Material Design Icons</a> for many of its icons.</p>
 
       <ul>
-        <li><img src=../img/tunnel.svg alt='JSON tunnel logo'>The JSON tunnel icon is the de facto logo for DLx</li>
+        <li><img src=../img/blog.svg alt='blog icon'>Blog icon</li>
+        <li><img src=../img/box.svg alt='box icon'>The box icon is the logo for the DLx app</li>
+        <li><img src=../img/browse.svg alt='browse icon'>The browse icon is the logo for the DLx data explorer</li>
+        <li><img src=../img/code.svg alt='programming code icon'>Icon representing programming code, e.g. indicating an area with raw JSON data, etc.</li>
+        <li><img src=../img/computer.svg alt='computer icon'>The computer icon is used for areas concerning developers</li>
+        <li><img src=../img/info.svg alt='info icon'>The info icon is used for About pages or to indicate where additional information is available</li>
+        <li><img src=../img/octicon.svg alt='GitHub octicon'>The GitHub Octicon logo</li>
+        <li><img src=../img/question.svg alt='question octicon'>The question icon is used for questions/help pages</li>
+        <li><img src=../img/tools.svg alt='tools icon'>The tools icon is used as the logo for the Tools section of the DLx app</li>
+        <li><img src=../img/tunnel.svg alt='JSON tunnel icon'>The JSON tunnel icon is the de facto logo for DLx</li>
         <li><img src=../img/wug.svg alt='a wug'>The blue wug is part of DLx branding, and can be used creatively wherever appropriate</li>
         <li><img src=../img/wugbot.svg alt='a wugbot'>The wugbot icon is another de facto logo for DLx, part of DLx branding, and can be used creatively wherever appropriate</li>
         <li><img class=favicon src=../img/tunnel.ico alt='JSON tunnel favicon'>The JSON tunnel icon as a favicon</li>
