restructure dlx.less into smaller components
closes #16

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -11,10 +11,6 @@
 
     <link href=https://cdn.digitallinguistics.io/img/wugbot.ico rel='shortcut icon' type=image/x-icon>
 
-    <link rel=stylesheet href=../css/fonts.css>
-    <link rel=stylesheet href=../css/reset.css>
-    <link rel=stylesheet href=../css/dlx.css>
-
     <link rel=stylesheet href=patterns.css>
     <link rel=stylesheet href=atom-one-light.css>
 
@@ -253,6 +249,9 @@
       <p class=hanging-indent style="font-style: italic; font-weight: bold;"><strong>Fira Sans Medium Italic</strong> is used for the combination of bold and italics.</p>
       <p class=hanging-indent style="font-family: 'Fira Mono';"><strong>Fira Mono</strong> is used for monospaced code blocks.</p>
       <p class=hanging-indent style="font-family: 'Fira Mono'; font-weight: bold;"><strong>Fira Mono Bold</strong> is used for emphasized or bolded code.</p>
+      <p class='hanging-indent unicode'><strong>Gentium Plus Regular</strong> is used for text that needs to support Unicode characters, such as data input fields.</p>
+      <p class='hanging-indent unicode' style="font-style: italic;"><strong>Gentium Plus Italic</strong> is used for italicized text that requires Unicode support, such as inline citation of data.</p>
+      <p class=hanging-indent>Gentium Fonts are also enlarged slightly so that <span class=unicode>they can be used inline</span> in stretches of Fira Sans text without too much of a size disparity.</p>
 
     </section>
     <!-- END TYPOGRAPHY -->
