fix tooltip, add icons
closes #17

--- a/patterns/examples/tooltip.html
+++ b/patterns/examples/tooltip.html
@@ -4,5 +4,5 @@
 
 <label class=tooltip title='This is a tooltip on a block element'>
   <span>Tooltip</span>
-  <input type=text class=tooltip placeholder='Hover here to see the tooltip'>
+  <input type=text>
 </label>
