--- a/patterns/index.html
+++ b/patterns/index.html
@@ -269,9 +269,12 @@
         <li><img src=../img/code.svg alt='programming code icon'>Icon representing programming code, e.g. indicating an area with raw JSON data, etc.</li>
         <li><img src=../img/computer.svg alt='computer icon'>The computer icon is used for areas concerning developers</li>
         <li><img src=../img/info.svg alt='info icon'>The info icon is used for About pages or to indicate where additional information is available</li>
+        <li><img src=../img/menu.svg alt='info icon'>A basic menu / navigation icon</li>
+        <li><img src=../img/language.svg alt='language icon'>This icon is used to represent the concept of a language</li>
         <li><img src=../img/octicon.svg alt='GitHub octicon'>The GitHub Octicon logo</li>
         <li><img src=../img/question.svg alt='question octicon'>The question icon is used for questions/help pages</li>
-        <li><img src=../img/tools.svg alt='tools icon'>The tools icon is used as the logo for the Tools section of the DLx app</li>
+        <li><img src=../img/tools.svg alt='tools icon'>A generic tools icon</li>
+        <li><img src=../img/tools.color.svg alt='tools icon'>The tools icon is used as the logo for the Tools section of the DLx app</li>
         <li><img src=../img/tunnel.svg alt='JSON tunnel icon'>The JSON tunnel icon is the de facto logo for DLx</li>
         <li><img src=../img/wug.svg alt='a wug'>The blue wug is part of DLx branding, and can be used creatively wherever appropriate</li>
         <li><img src=../img/wugbot.svg alt='a wugbot'>The wugbot icon is another de facto logo for DLx, part of DLx branding, and can be used creatively wherever appropriate</li>
