--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name=keywords content='digital linguistics, dlx, linguistics, language, documentation, description, revitalization'>
     <meta name=viewport content='width=device-width, initial-scale=1'>
 
-    <link href=https://cdn.digitallinguistics.io/img/wugbot.ico rel='shortcut icon' type=image/x-icon>
+    <link href=img/wugbot.ico rel='shortcut icon' type=image/x-icon>
 
-    <link rel=stylesheet href=patterns.css>
-    <link rel=stylesheet href=atom-one-light.css>
+    <link rel=stylesheet href=css/patterns.css>
+    <link rel=stylesheet href=css/atom-one-light.css>
 
   </head>
 
